test/spec_vectors/simd_i32x4_cmp/fail/module_25.wat
(module (func $i32x4.gt_s-arg-empty (result v128) (i32x4.gt_s)))